better doc. added LinkDto to avoid the users to know the content of a Link struct. changed the url to access links from /api/v1/links to /api/v1/l
